more static file work

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,8 +3,8 @@
         <title>Default Django Project</title>
     </head>
     <body>
-        Project setup looks good.
-        <script type="javascript" src="/static/test.js"></script>
+        Project setup looks good. Are static files being served correctly?
+        <script type="text/javascript" src="/static/test.js"></script>
 
     </body>
 </html>
