settings and templates

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -42,7 +42,7 @@
         </ul>
         {% endif %}
         
-        {% block main %}{% endblock %}
+        {% block content %}{% endblock content %}
     </div>
     <footer>
     {% block footer %}
